--- a/css/utilities/variables.scss
+++ b/css/utilities/variables.scss
@@ -51,6 +51,6 @@ $current-tab-bg: white;
 $tab-bg: $secondaryColor;
 
 //borders
-$borderColor: black;
-$thick: 2px;
+$borderColor: grey;
+$thick: 1.5px;
 $thin: 1px;
