--- a/css/pSlider.css
+++ b/css/pSlider.css
@@ -19,7 +19,7 @@
         padding: 5px;
         position: relative;
         left: 5px;
-        border: 1px solid black;
+        border: 1px solid grey;
         border-radius: 5px;
         color: black;
         font-weight: bold;
