--- a/css/utilities/variables.scss
+++ b/css/utilities/variables.scss
@@ -17,7 +17,7 @@ $motif-title-bg: $boxBackground;
 $motif-title-color: $textColor;
 $motif-in-result-bg: $boxBackground;
 $motif-in-result-round-bg: $boxBackground;
-$motif-selected-on-result-hover: salmon;
+$motif-selected-on-result-hover: $accentColor;
 
 
 //main page
