--- a/css/controlElements.css
+++ b/css/controlElements.css
@@ -35,7 +35,8 @@ Example: <a href="#" class="close">
 
 .tab-result .close {
   position: absolute;
-  right: 6px; }
+  right: 6px;
+  margin-top: 4px; }
 
 .tab-link .close {
   display: none;
@@ -80,7 +81,7 @@ Example: <a href="#" class="lock">
   position: absolute;
   right: 32px;
   display: inline-block;
-  margin-top: 68px;
+  margin-top: 58px;
   width: 24px;
   height: 24px;
   line-height: 24px; }
@@ -92,7 +93,7 @@ Example: <a href="#" class="copy-button">
   position: absolute;
   right: 4px;
   display: inline-block;
-  margin-top: 68px;
+  margin-top: 58px;
   width: 24px;
   height: 24px;
   line-height: 24px; }
