--- a/css/controlElements.scss
+++ b/css/controlElements.scss
@@ -42,6 +42,7 @@ Example: <a href="#" class="close">
 .tab-result .close {
   position: absolute;
   right: 6px;
+  margin-top: 4px;
 }
 .tab-link .close {
   display: none;
