-buttons: fixed empty sequence addition -resultTabs: fixed seq names title length
Signed-off-by: Eugene Rumynskiy <erumynskiy@gmail.com>

--- a/css/UIComponents.css
+++ b/css/UIComponents.css
@@ -103,7 +103,7 @@
     width: 100%;
     line-height: 25px;
     height: 205px;
-    padding-bottom: 5px;
+    padding: 5px 0px;
     margin-bottom: 5px; }
   #manual-seq-input .input-controls {
     padding: 10px 0 10px 5px; }
