--- a/css/UIComponents.scss
+++ b/css/UIComponents.scss
@@ -164,7 +164,7 @@
     width: 100%;
     line-height: 25px;
     height: 205px;
-    padding-bottom: 5px;
+    padding: 5px 0px;
     margin-bottom: 5px;
   }
 
