--- a/css/UIComponents.css
+++ b/css/UIComponents.css
@@ -215,18 +215,20 @@
           overflow: hidden; }
     #result-cmp #result-sequences .flattened .digits {
       position: static;
+      height: 20px;
       line-height: 20px;
       width: inherit; }
     #result-cmp #result-sequences .flattened .sequence {
       position: static;
       margin-top: 0 !important;
+      height: 70px;
       line-height: 70px;
       width: inherit; }
     #result-cmp #result-sequences .flattened .locked.digits {
       position: absolute; }
     #result-cmp #result-sequences .flattened .locked.sequence {
       position: absolute;
-      padding-top: 24px; }
+      padding-top: 20px; }
     #result-cmp #result-sequences .full-screen .digits {
       position: static;
       margin-top: -22.5px;
