--- a/css/navigationTopBar.scss
+++ b/css/navigationTopBar.scss
@@ -167,11 +167,11 @@ ul {
 /*Positioning*/
 /* Default media < 800px - two line menu */
 .the-nav {
-  min-width: 500px;
+  min-width: 600px;
   .top-first{
     position: absolute;
     > .search-container {
-      min-width: 500px;
+      min-width: 320px;
     }
   }
   .top-second {
@@ -180,7 +180,7 @@ ul {
 }
 
 /* Media for larger devices */
-@media screen and (min-width: 800px) {
+@media screen and (min-width: $widthThreshHold) {
   .nav-bar {
     height: $topNav-navLineHeight;
 
@@ -203,7 +203,3 @@ ul {
     }
   }
 }
-
-@import url(http://fonts.googleapis.com/css?family=Lato:300,400,700);
-
-
