--- a/css/UIComponents.css
+++ b/css/UIComponents.css
@@ -1,5 +1,5 @@
 .suggestions {
-  margin-top: 10px;
+  margin-top: 50px;
   background-color: #dadada;
   border-radius: 10px;
   border: 1px solid grey;
@@ -244,5 +244,10 @@
     display: none; }
   #result-cmp #result-slider {
     margin-top: 20px; }
+
+/* Media for larger devices */
+@media screen and (min-width: 970px) {
+  .suggestions {
+    margin-top: 10px; } }
 
 /*# sourceMappingURL=UIComponents.css.map */
