--- a/css/utilities/variables.scss
+++ b/css/utilities/variables.scss
@@ -48,7 +48,7 @@ $border-radius: 5px;
 
 //tabs
 $current-tab-bg: white;
-$tab-bg: $secondaryColor;
+$tab-bg: $primaryColor;
 
 //borders
 $borderColor: grey;
@@ -56,4 +56,4 @@ $thick: 1.5px;
 $thin: 1px;
 
 //screen width
-$widthThreshHold: 970px;
+$widthThreshHold: 1340px;
