--- a/css/UIComponents.css
+++ b/css/UIComponents.css
@@ -163,7 +163,7 @@
     cursor: pointer;
     background-color: #ededf2; }
     #result-cmp #result-tabs .tab-result {
-      background-color: #ededf2;
+      background-color: #dadada;
       height: 90px;
       line-height: 90px;
       margin: 5px 0 10px 0;
@@ -246,7 +246,7 @@
     margin-top: 20px; }
 
 /* Media for larger devices */
-@media screen and (min-width: 970px) {
+@media screen and (min-width: 1340px) {
   .suggestions {
     margin-top: 10px; } }
 
