--- a/css/primaryComponentsSettings.scss
+++ b/css/primaryComponentsSettings.scss
@@ -11,7 +11,6 @@
 }
 html {
   overflow-x: hidden;
-  height: 100%;
 }
 body {
   height: 100%;
@@ -34,6 +33,9 @@ td a:visited,
 
 .interface-area {
   margin-top: 2 * $topNav-navLineHeight;
+  .disabled {
+    display: none;
+  }
 }
 .interface-component {
   padding: 5px 5px 5px 5px;
