--- a/css/utilities/variables.scss
+++ b/css/utilities/variables.scss
@@ -35,11 +35,13 @@ $slider-marker-bg: $textColor;
 $icon-default-color: $textColor;
 $icon-hover-color: $textColor;
 $icon-active-color: $accentColor;
+
 $button-bg: white;
 $sequence-input-borders: black;
 
 
 //sequenceInput
+$seqFontSize: 23px;
 $resultTab-width: 180px;
 $resultTab-height: 90px;
 
