--- a/css/UIComponents.scss
+++ b/css/UIComponents.scss
@@ -66,7 +66,7 @@
         border: $thin solid $borderColor;
         border-radius: 10px;
 
-        font-family: "Gotham Rounded SSm A", "Gotham Rounded SSm B";
+        font-family: "Gotham Rounded SSm A", "Gotham Rounded SSm B", Times, Serif;
         font-size: 16px;
         color: $motif-title-color;
       }
@@ -120,13 +120,13 @@
         border: 3px transparent solid;
         border-radius: 5px;
 
-        font-family: "Gotham Rounded SSm A","Gotham Rounded SSm B";
+        font-family: "Gotham Rounded SSm A","Gotham Rounded SSm B", "Times New Roman";
         font-size: 16px;
         color: $motif-title-color;
       }
 
       .description{
-        margin: 0px 2px 8px 8px;
+        margin: 0 2px 8px 8px;
         vertical-align: middle;
       }
 
@@ -160,21 +160,22 @@
     border: solid $thick $boxBackground;
     border-bottom: solid $borderColor $thick;
 
-    font-family: "Courier New", "Times New Roman";
-    font-size: 23px;
+    font-family: "Courier New", "Monospaced", Times;
+    font-size: $seqFontSize;
     resize: none;
 
     width: 100%;
     line-height: 25px;
     height: 205px;
-    padding: 5px 0px;
+    padding: 5px 0;
     margin-bottom: 5px;
   }
 
   .input-controls {
     padding: 10px 0 10px 5px;
 
-    .interface-button{
+    .interface-button {
+      background-color: $secondaryColor;
       border-radius: 5px;
       border: solid $borderColor $thin;
       padding: 7px;
@@ -187,7 +188,27 @@
           float:right;
         }
       }
+
+      label {
+        cursor: pointer;
+      }
     }
+
+    .zoom-button {
+      cursor: default;
+      i {
+        cursor: pointer;
+      }
+
+      .material-icons:hover {
+        color: $icon-hover-color;
+      }
+      .material-icons:active {
+         color: $icon-active-color;
+       }
+    }
+
+
   }
 }
 
@@ -246,7 +267,7 @@
     min-width: $resultTab-width;
     position: absolute;
 
-    left: 0px;
+    left: 0;
     padding:0 0 0 5px;
     z-index: 2;
     cursor: pointer;
@@ -298,7 +319,7 @@
     border-top-right-radius: 5px;
 
     font-family: "Courier New", "monospace";
-    font-size: 23px;
+    font-size: $seqFontSize;
 
     .patch {
       position: absolute;
