--- a/css/navigationTopBar.css
+++ b/css/navigationTopBar.css
@@ -84,7 +84,10 @@ ul {
       font-size: 15px; }
   .nav > .title-container {
     color: black;
-    padding: 10px; }
+    padding: 10px;
+    position: absolute;
+    min-width: 410px;
+    left: 400px; }
 
 /* Active State */
 .nav > li:hover > a {
@@ -137,8 +140,7 @@ ul {
 .the-nav {
   min-width: 600px; }
   .the-nav .top-first {
-    position: absolute;
-    overflow-x: hidden; }
+    position: absolute; }
     .the-nav .top-first > .search-container {
       min-width: 320px; }
   .the-nav .top-second {
