--- a/css/utilities/variables.scss
+++ b/css/utilities/variables.scss
@@ -33,6 +33,7 @@ $slider-marker-bg: $textColor;
 
 //buttons
 $icon-default-color: $textColor;
+$icon-inactive: rgba(0, 0, 0, 0.54); //from icon.css
 $icon-hover-color: $textColor;
 $icon-active-color: $accentColor;
 
