--- a/css/UIComponents.scss
+++ b/css/UIComponents.scss
@@ -1,7 +1,12 @@
 @import "utilities/variables";
 
+.nav-area {
+  font-family: $defaultFontFamily;
+}
 
 .suggestions {
+  font-family: $defaultFontFamily;
+
   margin-top: 10px + $topNav-navLineHeight;
   background-color: $topNav-primaryMenuBackground;
   border-radius: 10px;
@@ -66,12 +71,10 @@
         border: $thin solid $borderColor;
         border-radius: 10px;
 
-        font-family: "Gotham Rounded SSm A", "Gotham Rounded SSm B", Times, Serif;
         font-size: 16px;
         color: $motif-title-color;
       }
       .motif-title:hover {
-        cursor: pointer;
         cursor: hand;
       }
     }
@@ -82,7 +85,6 @@
   }
 
   #ifMore-container{
-
     .ifMore-value {
       min-height: 35px;
 
@@ -97,7 +99,9 @@
 
 
 #motif-list-selected-cmp {
+  font-family: $defaultFontFamily;
   min-height: 75px;
+
   #motif-list-selected {
     display: inline-block;
     margin-top: 20px;
@@ -120,7 +124,6 @@
         border: 3px transparent solid;
         border-radius: 5px;
 
-        font-family: "Gotham Rounded SSm A","Gotham Rounded SSm B", "Times New Roman";
         font-size: 16px;
         color: $motif-title-color;
       }
@@ -151,6 +154,7 @@
 
 
 #manual-seq-input {
+  font-family: $defaultFontFamily;
   background-color: $boxBackground;
   border: $thick solid $borderColor;
   border-radius: 5px;
@@ -158,9 +162,9 @@
 
   textarea {
     border: solid $thick $boxBackground;
-    border-bottom: solid $borderColor $thick;
+    border-bottom: solid $thick $borderColor;
 
-    font-family: "Courier New", "Monospaced", Times;
+    font-family: $seqFont;
     font-size: $seqFontSize;
     resize: none;
 
@@ -214,7 +218,8 @@
 
 
 #sequence-input-cmp {
-  background-color: $main-bg-color; //#e9e9e9;
+  font-family: $defaultFontFamily;
+  background-color: $main-bg-color;
 
   .controls {
     border-radius: 2px;
@@ -261,6 +266,7 @@
 
 
 #result-cmp {
+  font-family: $defaultFontFamily;
   position: relative;
 
   #result-tabs{
@@ -306,6 +312,9 @@
   }
 
   #result-sequences {
+    font-family: $seqFont;
+    font-size: $seqFontSize;
+
     margin-left: $resultTab-width - 5px;
     margin-top: 5px;
     top: 0;
@@ -317,9 +326,6 @@
     background-color: white;
     border-top: solid $thick $borderColor;
     border-top-right-radius: 5px;
-
-    font-family: "Courier New", "monospace";
-    font-size: $seqFontSize;
 
     .patch {
       position: absolute;
@@ -339,10 +345,7 @@
 
     .tab-result-sequence {
       margin: 10px 0 5px 0;
-
       background-color: #ffffff;
-      //height: $resultTab-height;
-      //line-height: $resultTab-height;
 
       .digits {
         opacity: 0.3;
@@ -405,10 +408,10 @@
   #result-sequences:empty {
     display: none;
   }
+}
 
-  #result-slider{
-    margin-top: 20px;
-  }
+#motif-table-cmp {
+  font-family: $defaultFontFamily;
 }
 
 
