--- a/css/pSlider.scss
+++ b/css/pSlider.scss
@@ -1,12 +1,14 @@
 @import "utilities/variables";
 
 .sliderBox {
-  padding: 10px 10px 10px 10px;
+  font-family: $defaultFontFamily;
+
+  padding: 10px;
+  margin-bottom: 20px;
 
   #log-slider {
-    display: inline-block;
-    width: 70%;
-    margin-top: 5px;
+    display: block;
+    margin: -35px 0 0 410px;
   }
 
   .inputBox {
@@ -17,7 +19,7 @@
 
     .inputUnit{
       display: inline-block;
-      width: 240px;
+      margin-right: 5px;
 
       .label {
         left: 5px;
@@ -28,7 +30,6 @@
         padding: 5px;
 
         position: relative;
-        left: 5px;
         border: $thin solid $borderColor;
         border-radius: 5px;
 
