--- a/css/utilities/variables.scss
+++ b/css/utilities/variables.scss
@@ -3,6 +3,7 @@ $secondaryColor: #ededf2;
 $accentColor: #a3a3a3;
 $boxBackground: white;
 $textColor: black; //#797979;
+$defaultFontFamily: "Gotham Rounded SSm A", "Gotham Rounded SSm B", Times, Serif;
 
 //nav-bar
 $topNav-navLineHeight: 40px;
@@ -13,6 +14,7 @@ $topNav-primaryBoxShadow: black;
 
 //motif titles
 //BLACK WHITE SALMON
+//$motif-title-font: $defaultFontFamily;
 $motif-title-bg: $boxBackground;
 $motif-title-color: $textColor;
 $motif-in-result-bg: $boxBackground;
@@ -40,8 +42,8 @@ $icon-active-color: $accentColor;
 $button-bg: white;
 $sequence-input-borders: black;
 
-
 //sequenceInput
+$seqFont: "Courier New", "Monospaced", monospace;
 $seqFontSize: 23px;
 $resultTab-width: 180px;
 $resultTab-height: 90px;
