--- a/css/navigationTopBar.scss
+++ b/css/navigationTopBar.scss
@@ -109,6 +109,7 @@ ul {
   }
 
   > .title-container{
+    text-shadow: 1px 4px 6px $primaryColor, 0 0 0 black, 1px 4px 6px $primaryColor;
     color: $textColor;
     padding: 10px;
     position: absolute;
